[workspace]

members = [
    "crates/*"
]

[package]
name = "pomelo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.17"
tokio = { version = "1.17", features = ["io-std", "rt-multi-thread", "macros"] }
tokio-util = "0.7"
pomelo-lsp = { path = "crates/pomelo-lsp" }
tracing = "0.1"
tracing-subscriber = "0.3"
