[package]
name = "pomelo-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pomelo-parse = { path = "../pomelo-parse" }
pomelo-hir = { path = "../pomelo-hir" }
tower-lsp = "0.17"
serde_json = "1.0"
