[package]
name = "pomelo-parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pomelo-lex = { path = "../pomelo-lex" }
pomelo-syntax = { path = "../pomelo-syntax" }
nom = "7"
thiserror = "1"
miette = "5"
